FELIX-6618 : Check relevant registration properties for whiteboard services